# scrabble-ai

./: .gitignore  README.md  linting.sh  pyproject.toml
data/: french.let
src/: bag.py  game.py  game_thread.py  grid.py  main.py  player.py  settings.py  tree.py  utils.py
src/bestWordResearcher/: random_play.py
src/engine/: grid.py  tree.py  word_checker.py
src/game/: bag.py  game.py  player.py
src/search_strategy/: NaiveBlindSearch.py  NaiveSearch.py  UltraNaiveSearch.py  WordSearchStrategy.py
src/settings/: logger_config.py  settings.py
src/utils/: grid.py  logger_config.py  tree.py  typing.py  typing_utils.py  utils.py
src/utils/typing/: default.py  enum.py  typed_dict.py
tests/: test_placable_word.py
